Version 0.0.5 -- ???

  * change --speed option to --set-speed to match libinput.
  * Disable consolation on graphic terminals.
    This avoid some crashes with some kernels.

Version 0.0.4 -- 11 Dec 2016

  [Adam Borowski]
  * Add option --word-chars for configuring word selection.

Version 0.0.3 -- 9 Nov 2016

  [ Sitsofe Wheeler ]
  * Add support for absolute devices

Version 0.0.2 -- 28 Aug 2016

  * Fix terminal size detection. Reported by T. Joseph Carter.
  * Add --help and --version
  * Improve manpage

Version 0.0.1 -- 7 Aug 2016

  * First release included in Debian unstable.

Version 0.0.0 -- 6 Aug 2016

  * First public release.